# Time-Series-Forcasting-Benchmark

./: README.md  pyproject.toml  requirements-workstation.txt
configs/: experiment.yaml
configs/datasets/: metr_la.yaml  pems03.yaml  pems04.yaml  pems07.yaml  pems08.yaml  pems_bay.yaml  t_drive.yaml
scripts/: download_data.py  run_benchmark.py
src/: __init__.py  data_pipeline.py  eda_analyzer.py  orchestrator.py  report_generator.py  trainer.py  verification.py
src/models/: __init__.py  base.py  baselines.py  classical_ml.py  dl_complex.py  dl_minimalist.py  factory.py  foundation.py  probabilistic.py
tests/: test_data_pipeline.py  test_trainer.py
